# Strategy-IA-

./: .gitignore  README.md  pyproject.toml
configs/: backtest.yaml  base.yaml  data.yaml  env.yaml  features.yaml  paper.yaml  risk.yaml  rl.yaml  strategy.yaml  validation.yaml
configs/experiments/: azir_management_price_replay_v1.yaml  azir_management_price_replay_v2.yaml  azir_ppo_masking_regularization_v1.yaml  azir_ppo_skip_take.yaml  azir_ppo_skip_take_adjusted_v1.yaml  azir_setup_base_research_v1.yaml  intraday_hybrid_realism.yaml  intraday_hybrid_research.yaml  intraday_nasdaq_contextual_research.yaml  orb_ablation.yaml  orb_focus_validation.yaml  orb_frequency_expansion.yaml  orb_frequency_push.yaml  orb_intraday_active_research.yaml  session_trend_30m_zoom.yaml  shorts_strict_clean_hours_extended.yaml  trend_pullback_v1_research.yaml
configs/variants/: baseline_intraday_hybrid.yaml  baseline_nq_intraday_contextual.yaml  baseline_nq_intraday_orb_active.yaml  baseline_nq_orb.yaml  baseline_trend_nasdaq.yaml  baseline_trend_nasdaq_v2.yaml  baseline_trend_nasdaq_v2_long_only.yaml  baseline_trend_nasdaq_v2_short_only.yaml  baseline_trend_nasdaq_v3_short_bias.yaml  baseline_trend_pullback_v1.yaml  baseline_v2.yaml  baseline_v3.yaml  long_only_clean_hours.yaml  orb30_close_multi_no_slope_no_rvol.yaml  orb30_close_multi_no_slope_no_rvol_extension_laxer.yaml  orb30_close_multi_no_slope_no_rvol_width_laxer_extension_laxer.yaml  orb30_close_multi_no_slope_no_rvol_width_wider.yaml  session_trend_30m.yaml  shorts_strict_clean_hours.yaml
docs/: architecture.md  azir_benchmark_definition.md  azir_best_setup_candidate_fractal_v1.md  azir_fractal_candidate_mt5_export_v1.md  azir_management_env.md  azir_management_price_replay.md  azir_management_price_replay_v2.md  azir_protected_economic_benchmark_v1.md  azir_setup_base_research_v1.md  experiments.md  risk_engine.md  rl_env.md  rl_environment.md  spec.md
mql5/: AzirEventLogger.mqh  AzirFractalCandidateEventExport.ex5  AzirFractalCandidateEventExport.mq5  AzirFractalCandidateFullLifecycleExport.ex5  AzirFractalCandidateFullLifecycleExport.mq5
scripts/: compare_baselines.py  run_baseline.py  train_ppo.py
src/hybrid_quant/: __init__.py  bootstrap.py
src/hybrid_quant/azir/: __init__.py  audit.py  best_setup_candidate.py  cli.py  comparison.py  economic_audit.py  event_log.py  fractal_candidate_export.py  fractal_candidate_real_mt5.py  fractal_clean_rerun.py  fractal_full_lifecycle_export.py  fractal_lifecycle_final_comparison.py  fractal_protected_economic.py  fractal_tick_replay.py  inspection.py  management_replay.py  management_replay_v2.py  ppo_adjustment.py  ppo_diagnostics.py  ppo_masking_regularization.py  protected_benchmark_freeze.py  replica.py  risk_reaudit.py  setup_research.py  tick_level_trade_protection_label_replay.py  trade_protection_label_diagnostics.py  trade_protection_research.py  trade_protection_threshold_refinement.py  train_ppo_skip_take.py
src/hybrid_quant/backtest/: __init__.py  engine.py
src/hybrid_quant/baseline/: __init__.py  __main__.py  analyze.py  comparison.py  diagnostics.py  intraday_hybrid_audit.py  intraday_hybrid_realism.py  intraday_hybrid_research.py  intraday_nasdaq_contextual_research.py  orb_ablation.py  orb_focus_validation.py  orb_frequency_expansion.py  orb_frequency_push.py  orb_intraday_active_research.py  runner.py  session_trend_30m_zoom.py  shorts_strict_clean_hours_extended.py  trend_pullback_v1_research.py  trend_refinement.py  variants.py
src/hybrid_quant/core/: __init__.py  config.py  contracts.py
src/hybrid_quant/env/: __init__.py  azir_event_env.py  azir_management_env.py  environment.py  gym_compat.py
src/hybrid_quant/execution/: __init__.py  simulator.py
src/hybrid_quant/features/: __init__.py  deterministic.py  pipeline.py
src/hybrid_quant/paper/: __init__.py  runner.py
src/hybrid_quant/risk/: __init__.py  azir_engine.py  azir_rules.py  azir_state.py  engine.py
src/hybrid_quant/rl/: __init__.py  dataset.py  evaluation.py  runner.py  sb3_compat.py  trainer.py
src/hybrid_quant/strategy/: __init__.py  base.py  context.py  factory.py  intraday_hybrid_contextual.py  intraday_nasdaq_contextual.py  mean_reversion.py  opening_range_breakout.py  orb_intraday_active.py  rules.py  trend_breakout.py  trend_pullback_continuation.py
src/hybrid_quant/validation/: __init__.py  __main__.py  comparison.py  robustness.py  (+1 more)
tests/integration/: test_baseline_nq_orb_flow.py  test_baseline_risk_flow.py  test_intraday_hybrid_research_flow.py  test_intraday_nasdaq_contextual_research_flow.py  test_orb_intraday_active_research_flow.py  test_scaffold_flow.py  test_session_trend_30m_zoom_flow.py  test_shorts_strict_clean_hours_extended_flow.py  test_trend_pullback_v1_research_flow.py  test_validation_robustness_flow.py
tests/unit/: test_azir_audit.py  test_azir_best_setup_candidate.py  test_azir_economic_audit.py  test_azir_event_env.py  test_azir_event_log.py  test_azir_fractal_candidate_export.py  test_azir_fractal_candidate_real_mt5.py  test_azir_fractal_clean_rerun.py  test_azir_fractal_full_lifecycle_export.py  test_azir_fractal_lifecycle_final_comparison.py  test_azir_fractal_protected_economic.py  test_azir_fractal_tick_replay.py  test_azir_inspection.py  test_azir_management_env.py  test_azir_management_replay.py  test_azir_management_replay_v2.py  test_azir_ppo_adjustment.py  test_azir_ppo_diagnostics.py  test_azir_ppo_masking_regularization.py  test_azir_protected_benchmark_freeze.py  test_azir_replica.py  test_azir_risk_engine.py  test_azir_risk_reaudit.py  test_azir_setup_research.py  test_azir_tick_level_trade_protection_label_replay.py  test_azir_trade_protection_label_diagnostics.py  test_azir_trade_protection_research.py  test_azir_trade_protection_threshold_refinement.py  test_azir_train_ppo_skip_take.py  test_backtest_engine.py  test_baseline_analyze.py  test_baseline_comparison.py  test_baseline_diagnostics.py  test_bootstrap.py  test_config.py  test_data_cleaning.py  test_data_cli.py  test_data_download.py  test_data_external.py  test_data_split.py  (+23 more)
