[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-quant-framework"
version = "0.1.0"
description = "Scaffold for a prop-firm friendly hybrid quantitative trading framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gymnasium>=0.29",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "requests>=2.31",
  "pyarrow>=16.1",
  "stable-baselines3>=2.3",
]

[project.scripts]
hybrid-quant-data = "hybrid_quant.data.cli:main"
hq-data-download = "hybrid_quant.data.cli:download_entrypoint"
hq-data-import = "hybrid_quant.data.cli:import_entrypoint"
hq-data-split = "hybrid_quant.data.cli:split_entrypoint"
hybrid-quant-baseline = "hybrid_quant.baseline.runner:main"
hybrid-quant-analyze-baseline = "hybrid_quant.baseline.analyze:main"
hybrid-quant-compare-baselines = "hybrid_quant.baseline.comparison:main"
hybrid-quant-diagnose-baseline = "hybrid_quant.baseline.diagnostics:main"
hybrid-quant-orb-ablation = "hybrid_quant.baseline.orb_ablation:main"
hybrid-quant-orb-focus-validation = "hybrid_quant.baseline.orb_focus_validation:main"
hybrid-quant-orb-frequency-expansion = "hybrid_quant.baseline.orb_frequency_expansion:main"
hybrid-quant-orb-frequency-push = "hybrid_quant.baseline.orb_frequency_push:main"
hybrid-quant-orb-intraday-active = "hybrid_quant.baseline.orb_intraday_active_research:main"
hybrid-quant-intraday-contextual = "hybrid_quant.baseline.intraday_nasdaq_contextual_research:main"
hybrid-quant-intraday-hybrid = "hybrid_quant.baseline.intraday_hybrid_research:main"
hybrid-quant-intraday-hybrid-audit = "hybrid_quant.baseline.intraday_hybrid_audit:main"
hybrid-quant-intraday-hybrid-realism = "hybrid_quant.baseline.intraday_hybrid_realism:main"
hybrid-quant-session-trend-zoom = "hybrid_quant.baseline.session_trend_30m_zoom:main"
hybrid-quant-shorts-strict-extended = "hybrid_quant.baseline.shorts_strict_clean_hours_extended:main"
hybrid-quant-trend-refinement = "hybrid_quant.baseline.trend_refinement:main"
hybrid-quant-validate-robustness = "hybrid_quant.validation.robustness:main"
hybrid-quant-compare-robustness = "hybrid_quant.validation.comparison:main"
hybrid-quant-train-ppo = "hybrid_quant.rl.cli:main"
hybrid-quant-azir-replica = "hybrid_quant.azir.cli:main"
hybrid-quant-azir-train-ppo-skip-take = "hybrid_quant.azir.train_ppo_skip_take:main"
hybrid-quant-azir-ppo-diagnostics = "hybrid_quant.azir.ppo_diagnostics:main"
hybrid-quant-azir-ppo-adjustment = "hybrid_quant.azir.ppo_adjustment:main"
hybrid-quant-azir-ppo-masking = "hybrid_quant.azir.ppo_masking_regularization:main"
hybrid-quant-azir-management-env = "hybrid_quant.env.azir_management_env:main"
hybrid-quant-azir-management-replay = "hybrid_quant.azir.management_replay:main"
hybrid-quant-azir-management-replay-v2 = "hybrid_quant.azir.management_replay_v2:main"
hybrid-quant-azir-setup-research = "hybrid_quant.azir.setup_research:main"
hybrid-quant-azir-best-setup-candidate = "hybrid_quant.azir.best_setup_candidate:main"
hybrid-quant-azir-fractal-candidate-export = "hybrid_quant.azir.fractal_candidate_export:main"
hybrid-quant-azir-fractal-real-mt5 = "hybrid_quant.azir.fractal_candidate_real_mt5:main"
hybrid-quant-azir-fractal-protected-economic = "hybrid_quant.azir.fractal_protected_economic:main"
hybrid-quant-azir-fractal-tick-replay = "hybrid_quant.azir.fractal_tick_replay:main"
hybrid-quant-azir-fractal-full-lifecycle-export = "hybrid_quant.azir.fractal_full_lifecycle_export:main"
hybrid-quant-azir-fractal-lifecycle-final-comparison = "hybrid_quant.azir.fractal_lifecycle_final_comparison:main"
hybrid-quant-azir-fractal-clean-rerun = "hybrid_quant.azir.fractal_clean_rerun:main"
hybrid-quant-azir-trade-protection-research = "hybrid_quant.azir.trade_protection_research:main"
hybrid-quant-azir-trade-protection-label-diagnostics = "hybrid_quant.azir.trade_protection_label_diagnostics:main"
hybrid-quant-azir-tick-level-trade-protection-label-replay = "hybrid_quant.azir.tick_level_trade_protection_label_replay:main"
hybrid-quant-azir-trade-protection-threshold-refinement = "hybrid_quant.azir.trade_protection_threshold_refinement:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
